# DOMicile

./: .diracrules  .eslintrc.json  .gitignore  .stylelintrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  HANDOFF.md  INIT.md  INSTALL.md  LICENSE  README.md  RELEASE-NOTES-v0.1.0.md  SKILL.md  eslint.config.js  index.html  package-lock.json  package.json  rust-toolchain.toml  vitest.config.js
.github/workflows/: ci.yml  publish-landing.yml  release.yml
.superpowers/brainstorm/: .last-token
components/: domi.css
components/primitives/alert/: README.md  alert.css  alert.html  demo.html
components/primitives/badge/: README.md  badge.css  badge.html  demo.html
components/primitives/button/: README.md  button.css  button.html  demo.html
components/primitives/card/: README.md  card.css  card.html  demo.html
components/primitives/checkbox/: README.md  checkbox.css  checkbox.html  demo.html
components/primitives/form/: README.md  demo.html  form.css  form.html
components/primitives/input/: README.md  demo.html  input.css  input.html
components/primitives/modal/: README.md  demo.html  modal.css  modal.html
components/primitives/nav/: README.md  demo.html  nav.css  nav.html
components/primitives/radio/: README.md  demo.html  radio.css  radio.html
components/primitives/select/: README.md  demo.html  select.css  select.html
components/primitives/table/: README.md  demo.html  table.css  table.html
components/primitives/tabs/: README.md  demo.html  tabs.css  tabs.html
components/primitives/toast/: README.md  demo.html  toast.css  toast.html
components/primitives/tooltip/: README.md  demo.html  tooltip.css  tooltip.html
crates/domi-egui/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/domi-egui/examples/: domi-egui-smoke.rs  index.html
crates/domi-egui/src/: alert.rs  badge.rs  button.rs  card.rs  checkbox.rs  form.rs  input.rs  lib.rs  modal.rs  nav.rs  radio.rs  select.rs  table.rs  tabs.rs  theme.rs  toast.rs  tooltip.rs
crates/domi-egui/tests/: alert_badge_tooltip_toast.rs  button.rs  card.rs  composites.rs  css_audit_consistency.rs  form.rs  form_leaves.rs  modal.rs  nav.rs  table.rs  tabs.rs  theme.rs  tokens_parity.rs
crates/domi-server/: AGENTS.md  Cargo.toml  build.rs
crates/domi-server/scripts/runtime/: domi-status.js
crates/domi-server/src/: lib.rs  main.rs
crates/domi-server/src/events/: event.rs  mod.rs  writer.rs
crates/domi-server/src/http/: args.rs  handlers.rs  mod.rs  router.rs  state.rs  ws.rs
crates/domi-server/src/http/handlers/: banner.rs  event_normalize.rs  events_get.rs  events_post.rs  healthz.rs  library_serve.rs  mod.rs  static_serve.rs  tests.rs
crates/domi-server/src/serve/: banner.rs  classify.rs  debouncer.rs  file.rs  file_change.rs  iter_watcher.rs  mod.rs  shim.rs  watcher.rs
crates/domi-server/src/serve/file/: mod.rs  safety.rs  static_get.rs  tests.rs
crates/domi-server/src/tools/: cli.rs  main.rs  mod.rs  push.rs  replay.rs  tail.rs  types.rs
crates/domi-server/tests/: binary_smoke.rs  tools_cli_help.rs  tools_push_smoke.rs  tools_replay_smoke.rs  tools_tail_smoke.rs
crates/domi-server/tests/common/: mod.rs
docs/: AGENTS.md  AUDIT.md  DESIGN.md  EXTENDING.md  KNOWN-ISSUES.md  LAYOUTS.md  PHASE2-SCOPE.md  PUBLISH-CHECKLIST.md  RUST.md  STANDARDS.md  USAGE.md  WIRE-PROTOCOL.md
docs/schemas/: event.schema.json
docs/superpowers/handoffs/: 2026-07-06-phase3a-react-handoff.md  2026-07-06-phase3b-astro-handoff.md  2026-07-06-phase3c-dvui-handoff.md  2026-07-06-phase3c-dvui-kickoff-handoff.md  2026-07-06-phase4-release-handoff.md  2026-07-06-phase4-skill-loop-handoff.md  2026-07-10-agent-friendly-refactor-handoff.md
docs/superpowers/plans/: 2026-07-05-dominice-phase1.md  2026-07-05-dominice-skill-rework.md  2026-07-05-phase2b-server-attached-js-plan.md  2026-07-05-phase2c-binary-plan.md  2026-07-05-phase2c-events-writer-plan.md  2026-07-05-phase2c-html-watcher-plan.md  2026-07-05-phase2d-agent-tooling-plan.md  2026-07-05-phase3a-react-plan.md  2026-07-06-phase3b-astro-plan.md  2026-07-06-phase3c-dvui-plan.md  2026-07-10-agent-friendly-refactor.md  2026-07-11-twopager-test.md
docs/superpowers/specs/: 2026-07-05-dominice-design.md  2026-07-05-dominice-skill-design.md  2026-07-05-phase2-wire-protocol-design.md  2026-07-05-phase2b-server-attached-js-design.md  2026-07-05-phase2c-binary-design.md  2026-07-05-phase2c-events-writer-design.md  2026-07-05-phase2c-html-watcher-design.md  (+7 more)
domicile/: README  SKILL.md
domicile/domicile/: README  SKILL.md
examples/: README.md  example-audit.html
scripts/: domi-audit.js  domi-wire.js  domi.js  install.sh  verify-skill-loop.sh  verify.sh  ws-probe.mjs
scripts/runtime/: AGENTS.md  domi-audit.js  domi-server.js  domi-wire.js  domi.js
scripts/shell/: AGENTS.md  install.sh  verify-skill-loop-server.sh  verify.sh
status/: STATUS.html  UX-MEMORY.html
templates/admin-tool/: README.md  index.html
templates/dashboard/: README.md  index.html
templates/landing-page/: README.md
templates/mobile-app-shell/: README.md  index.html
templates/pos-kiosk/: README.md  index.html
templates/webapp-shell/: README.md  index.html
templates/working-doc/: AGENTS.md  README.md  index.html
tests/: archetypes.test.js  css.test.js  domi-audit-iterations.test.js  domi-audit-refs.test.js  domi-audit.test.js  domi-server-js.test.js  domi-status.test.js  domi-wire.test.js  domi.test.js  tokens.test.js  wire-protocol.test.js
tests/primitives/: primitives.test.js
tokens/: index.json  tokens.bundoro.json  tokens.json  tokens.schema.json
tools/: AGENTS.md  agent-rules.md  build-skill-bundle.sh  check-file-size.mjs  domi-fetch.sh  domi-serve.sh  skill-smoke-server-test.mjs  skill-smoke-test.mjs  skill-smoke.mjs  smoke.mjs  tokens-to-css.mjs  where-is.mjs
tools/tests/: build-skill-bundle.test.sh  check-file-size.test.mjs  domi-fetch.test.mjs  domi-serve.test.mjs  where-is.test.mjs
(+15 files in other folders)
