[package]
name = "domi-egui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DOMicile 15-primitive widget library for egui (Phase 3c)."
publish = true
repository = "https://github.com/zaco-tm/DOMicile"
homepage = "https://github.com/zaco-tm/DOMicile"
documentation = "https://github.com/zaco-tm/DOMicile/blob/main/crates/domi-egui/README.md"
keywords = ["domicile", "ui", "design-system", "egui", "wasm"]
categories = ["gui", "wasm"]

[lib]
path = "src/lib.rs"

[dependencies]
egui = "0.32"
eframe = { version = "0.32", optional = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[features]
default = []
desktop = ["dep:eframe"]
glow = ["eframe/glow"]
wgpu = ["eframe/wgpu"]

[build-dependencies]
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
sha2 = "0.10"
pretty_assertions = "1"

[[example]]
name = "domi-egui-smoke"
required-features = ["desktop"]
