[package]
name = "domi-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DOMiNice live-server library (Phase 2c)."
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
fs2 = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
