[package]
name = "domi-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DOMiNice live-server library (Phase 2c)."
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
fs2 = "0.4"
tracing = "0.1"
notify = "6"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3"
pretty_assertions = "1"

[[bin]]
name = "domi-server"
path = "src/main.rs"
