[package]
name = "domi-server"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "DOMicile live-server library (Phase 2c)."
build = "build.rs"
repository = "https://github.com/zaco-tm/DOMicile"
homepage = "https://github.com/zaco-tm/DOMicile"
documentation = "https://github.com/zaco-tm/DOMicile/blob/main/docs/RUST.md"
keywords = ["domicile", "ui", "design-system", "websocket", "audit"]
categories = ["development-tools", "web-programming::http-server", "api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
fs2 = "0.4"
tracing = "0.1"
notify = "6"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "process", "io-util"] }
tempfile = "3"
pretty_assertions = "1"
tokio-tungstenite = "0.24"


[[bin]]
name = "domi-server"
path = "src/main.rs"
[[bin]]
name = "domi"
path = "src/tools/main.rs"
